versioned_docs/version-2026.1.1/professor/jose_jurandir_pereira_junior.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "José Jurandir Pereira Junior",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Direito Empresarial e Tributário - 1494",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Filosofia I - 2328",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "",
          "students": [
            "COM2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Legislação Aplicada e Direito do Consumidor - 1509",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "",
          "students": [
            "TGC2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Direito Empresarial e Tributário - 1494",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Direito do Trabalho e do consumidor - 2330",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "",
          "students": [
            "COM2026"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Filosofia I - 2328",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "",
          "students": [
            "COM2026"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Filosofia II - 2426",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Direito empresarial e tributário - 2454",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_14-2",
          "students": [
            "COM2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Filosofia II - 2426",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_7-2",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia 4 - 223",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_11-2",
          "students": [
            "EIN2023"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Legislação Aplicada e Direito do Consumidor - 1509",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "",
          "students": [
            "TGC2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# José Jurandir Pereira Junior

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
