versioned_docs/version-2026.1.3/professor/jose_jurandir_pereira_junior.mdx
---
sidebar_label: 'José Jurandir Pereira Junior'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "José Jurandir Pereira Junior",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "a_definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Orientação de Projeto Integrador",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior",
            "Celina de Oliveira Barbosa Gomes"
          ],
          "classroom": "a_definir",
          "students": [
            "COM2024-PI"
          ],
          "time": "16:45 - 17:35",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Filosofia II - 2426",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_5-1",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia II - 1232",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2025A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Direito do Trabalho e do consumidor - 2330",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_3-1",
          "students": [
            "COM2026"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Filosofia II - 2426",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_5-1",
          "students": [
            "COM2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia I - 464",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2026A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Direito empresarial e tributário - 2454",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_15-2",
          "students": [
            "COM2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Legislação Aplicada e Direito do Consumidor - 1509",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2026"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "FILOSOFIA I (531)",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (725)",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (531)",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "a_definir",
          "students": [
            "IIW2024A-DP"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        },
        {
          "subject": "Legislação Aplicada e Direito do Consumidor - 1509",
          "size": 2,
          "teachers": [
            "José Jurandir Pereira Junior"
          ],
          "classroom": "sala_3-1",
          "students": [
            "TGC2026"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# José Jurandir Pereira Junior

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

